feat(): implemented the FE BE connection
